qt/gen_qtouchdevice.h

class QTouchDevice;
typedef struct QTouchDevice QTouchDevice;
QTouchDevice* QTouchDevice_new();
struct miqt_array /* of QTouchDevice* */  QTouchDevice_devices();
struct miqt_string QTouchDevice_name(const QTouchDevice* self);
int QTouchDevice_type(const QTouchDevice* self);
int QTouchDevice_capabilities(const QTouchDevice* self);
int QTouchDevice_maximumTouchPoints(const QTouchDevice* self);
void QTouchDevice_setName(QTouchDevice* self, struct miqt_string name);
void QTouchDevice_setType(QTouchDevice* self, int devType);
void QTouchDevice_setCapabilities(QTouchDevice* self, int caps);
void QTouchDevice_setMaximumTouchPoints(QTouchDevice* self, int max);
void QTouchDevice_delete(QTouchDevice* self);